# SNPkit

./: README.md  pyproject.toml
snpkit/core/: __init__.py  geolocation.py  hardware.py  ip.py  mac.py
snpkit/core/discord_ext/: webhook.py
tests/: geolocation-test.py  hardware-test.py  ip-test.py  mac-test.py  webhook-test.py
