[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snpkit"
version = "1.0.1"
description = "SNPKit is a BETA network utility toolkit for retrieving network, hardware and geolocation information. Future modules will include Discord webhook embed sending utilities and a custom RPC system for Discord."
authors = [{name="Zustaendig x Sniper"}]

requires-python = ">=3.8"

dependencies = [
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "nvidia-ml-py",
    "discord_webhook"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Discord = "https://discord.gg/4NYxXXqANr"
GitHub = "https://github.com/Z30-Development"